--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
     android:gravity="center_vertical" >
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/healthy_meal"/>
+        android:layout_width="fill_parent"
+        android:layout_height="300dp"
+        android:id="@+id/title_image"/>
 
     <Button
         android:id="@+id/btnRandom"
