--- a/app/src/main/res/layout/chosen_show.xml
+++ b/app/src/main/res/layout/chosen_show.xml
@@ -6,5 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="stechb.myfirstapp.ShowChosen">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id = "@+id/meal_image"/>
 
 </RelativeLayout>
