--- a/app/src/main/res/layout/chosen_show.xml
+++ b/app/src/main/res/layout/chosen_show.xml
@@ -4,11 +4,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="stechb.myfirstapp.ShowChosen">
+    tools:context="stechb.myfirstapp.ShowChosen.java">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id = "@+id/meal_image"/>
+        android:id = "@+id/meal_image"
+        android:contentDescription="The meal image" />
 
 </RelativeLayout>
