--- a/app/src/main/res/layout/chosen_show.xml
+++ b/app/src/main/res/layout/chosen_show.xml
@@ -4,12 +4,22 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="stechb.myfirstapp.ShowChosen.java">
+    tools:context="stechb.myfirstapp.ShowChosen.java"
+    android:gravity="center_vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id = "@+id/meal_image"
         android:contentDescription="The meal image" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/name_view"
+        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/meal_image" />
 
 </RelativeLayout>
