--- a/app/src/main/res/layout/chosen_show.xml
+++ b/app/src/main/res/layout/chosen_show.xml
@@ -8,10 +8,14 @@
     android:gravity="center_vertical">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id = "@+id/meal_image"
-        android:contentDescription="The meal image" />
+        android:contentDescription="The meal image"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/name_view" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +23,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/name_view"
-        android:layout_centerHorizontal="true"
-        android:layout_alignTop="@+id/meal_image" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
