--- a/app/src/main/res/layout/chosen_show.xml
+++ b/app/src/main/res/layout/chosen_show.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="stechb.myfirstapp.ShowChosen.java"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="@drawable/cooking">
 
     <ImageView
         android:layout_width="fill_parent"
