--- a/app/src/main/res/layout/chosen_show.xml
+++ b/app/src/main/res/layout/chosen_show.xml
@@ -5,18 +5,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="stechb.myfirstapp.ShowChosen.java"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:background="@drawable/cooking">
 
     <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="278dp"
+        android:layout_width="300dp"
         android:id = "@+id/meal_image"
         android:contentDescription="The meal image"
+        android:background="#407F7F"
+
+        android:padding="9dp"
+        android:adjustViewBounds="true"
+
+        android:layout_marginBottom="52dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/name_view" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,6 +29,10 @@
         android:text="Large Text"
         android:id="@+id/name_view"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:textColor="#0D4D4D"
+
+       />
 
 </RelativeLayout>
