--- a/app/src/main/res/layout/chosen_show.xml
+++ b/app/src/main/res/layout/chosen_show.xml
@@ -1,4 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,7 +8,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="stechb.myfirstapp.ShowChosen.java"
     android:gravity="center"
-    android:background="@drawable/cooking">
+    android:background="@drawable/cooking"
+    android:id="@+id/thisLayout">
 
     <ImageView
         android:layout_height="278dp"
@@ -35,5 +38,6 @@
         android:shadowRadius="10.0"
 
         android:minHeight="150dp" />
+
 
 </RelativeLayout>
