--- a/app/src/main/res/layout/activity_set_random.xml
+++ b/app/src/main/res/layout/activity_set_random.xml
@@ -49,18 +49,18 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.33"
             android:orientation="horizontal">
 
             <ImageButton
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
+                android:layout_height="169dp"
+                android:layout_weight="0.87"
                 android:id="@+id/iButton5"/>
             <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
+                android:layout_width="30dp"
+                android:layout_height="147dp"
+                android:layout_weight="1.06"
                 android:id="@+id/iButton6"/>
 
         </LinearLayout>
