--- a/app/src/main/res/layout/show_recipe.xml
+++ b/app/src/main/res/layout/show_recipe.xml
@@ -7,4 +7,60 @@
     tools:context="stechb.myfirstapp.ShowRecipe"
     android:background="@drawable/cooking">
 
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/mealIcon"
+        android:padding="6dp"
+        android:background="#407F7F" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/mealName"
+        android:layout_alignBottom="@+id/mealIcon"
+        android:layout_toRightOf="@+id/mealIcon"
+        android:layout_alignTop="@+id/mealIcon"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#407F7F" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/mealIngr"
+        android:layout_below="@+id/mealName"
+        android:layout_toEndOf="@+id/mealIcon"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#407F7F" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Ingredients comes here"
+        android:id="@+id/mealRecipe"
+        android:layout_toEndOf="@+id/mealIcon"
+        android:layout_below="@+id/mealIngr"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#407F7F"
+        android:textSize="20dp"
+        android:scrollbars="vertical"
+        android:nestedScrollingEnabled="true"
+        />
 </RelativeLayout>
