--- a/app/src/main/res/layout/show_recipe.xml
+++ b/app/src/main/res/layout/show_recipe.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="stechb.myfirstapp.ShowRecipe"
-    android:background="@drawable/cooking">
+    android:background="@drawable/cooking"
+    android:gravity="center">
 
     <ImageView
         android:layout_width="80dp"
