--- a/app/src/main/res/layout/activity_set_random.xml
+++ b/app/src/main/res/layout/activity_set_random.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -8,61 +8,226 @@
     android:background="@drawable/cooking"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text = " Choose the type of meal you would like:"
+        android:id = "@+id/instruct"
+        android:layout_marginBottom="20dp"
+        android:textSize="18dp"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#0D4D4D"
+        android:gravity = "center"/>
 
-        
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+    <!-- FIRST ROW OF PICTURES STARTS HERE -->
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:id="@+id/iButton1"/>
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:id="@+id/iButton2"/>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Frame1"
+        android:layout_below="@+id/instruct"
+        android:background="#407F7F"
+        android:padding= "5dp">
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+        <ImageButton
+            android:layout_width="147dp"
+            android:layout_height="133dp"
+            android:background="@drawable/chicken"
+            android:id="@+id/iButton1"/>
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:id="@+id/iButton3"/>
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:id="@+id/iButton4"/>
+    </FrameLayout>
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.33"
-            android:orientation="horizontal">
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="169dp"
-                android:layout_weight="0.87"
-                android:id="@+id/iButton5"/>
-            <ImageButton
-                android:layout_width="30dp"
-                android:layout_height="147dp"
-                android:layout_weight="1.06"
-                android:id="@+id/iButton6"/>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Frame2"
+        android:layout_below="@+id/instruct"
+        android:layout_alignBottom="@+id/Frame1"
+        android:layout_alignTop="@+id/Frame1"
+        android:layout_marginLeft="14dp"
+        android:layout_toRightOf="@+id/Frame1"
+        android:background="#407F7F"
+        android:padding= "5dp">
 
-        </LinearLayout>
+        <ImageButton
+            android:layout_width="147dp"
+            android:layout_height="133dp"
+            android:background="@drawable/pork"
+            android:id="@+id/iButton2"/>
 
-</LinearLayout>
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Chicken"
+        android:id = "@+id/iText1"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#0D4D4D"
+        android:textSize="20dp"
+        android:layout_below="@+id/Frame1"
+        android:layout_alignLeft= "@+id/Frame1"
+        android:layout_alignRight="@+id/Frame1"
+        android:gravity="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pork"
+        android:layout_alignBottom="@+id/iText1"
+        android:layout_alignTop="@+id/iText1"
+        android:layout_toRightOf="@+id/iText1"
+        android:layout_below="@+id/Frame2"
+        android:layout_alignLeft= "@+id/Frame2"
+        android:layout_alignRight="@+id/Frame2"
+        android:gravity="center"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#0D4D4D"
+        android:textSize="20dp"
+        android:id="@+id/iText2"/>
+
+    <!-- SECOND ROW OF PICTURES STARTS HERE -->
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Frame3"
+        android:layout_below="@+id/iText1"
+        android:layout_marginTop="10dp"
+        android:background="#407F7F"
+        android:padding= "5dp">
+
+        <ImageButton
+            android:layout_width="147dp"
+            android:layout_height="133dp"
+            android:background="@drawable/beef"
+            android:id="@+id/iButton3"/>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Frame4"
+        android:layout_below="@+id/iText2"
+        android:layout_alignBottom="@+id/Frame3"
+        android:layout_alignTop="@+id/Frame3"
+        android:layout_marginLeft="14dp"
+        android:layout_toRightOf="@+id/Frame3"
+        android:background="#407F7F"
+        android:padding= "5dp">
+
+        <ImageButton
+            android:layout_width="147dp"
+            android:layout_height="133dp"
+            android:background="@drawable/fish"
+            android:id="@+id/iButton4"/>
+
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beef"
+        android:id = "@+id/iText3"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#0D4D4D"
+        android:textSize="20dp"
+        android:layout_below="@+id/Frame3"
+        android:layout_alignLeft= "@+id/Frame3"
+        android:layout_alignRight="@+id/Frame3"
+        android:gravity="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fish"
+        android:layout_alignBottom="@+id/iText3"
+        android:layout_alignTop="@+id/iText3"
+        android:layout_toRightOf="@+id/iText3"
+        android:layout_below="@+id/Frame4"
+        android:layout_alignLeft= "@+id/Frame4"
+        android:layout_alignRight="@+id/Frame4"
+        android:gravity="center"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#0D4D4D"
+        android:textSize="20dp"
+        android:id="@+id/iText4"/>
+
+    <!-- THIRD ROW OF PICTURES STARTS HERE -->
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Frame5"
+        android:layout_below="@+id/iText3"
+        android:layout_marginTop="10dp"
+        android:background="#407F7F"
+        android:padding= "5dp">
+
+        <ImageButton
+            android:layout_width="147dp"
+            android:layout_height="133dp"
+            android:background="@drawable/veggie"
+            android:id="@+id/iButton5"/>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Frame6"
+        android:layout_below="@+id/iText4"
+        android:layout_alignBottom="@+id/Frame5"
+        android:layout_alignTop="@+id/Frame5"
+        android:layout_marginLeft="14dp"
+        android:layout_toRightOf="@+id/Frame5"
+        android:background="#407F7F"
+        android:padding= "5dp">
+
+        <ImageButton
+            android:layout_width="147dp"
+            android:layout_height="133dp"
+            android:background="@drawable/newchef"
+            android:id="@+id/iButton6"/>
+
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Vegetarian"
+        android:id = "@+id/iText5"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#0D4D4D"
+        android:textSize="20dp"
+        android:layout_below="@+id/Frame5"
+        android:layout_alignLeft= "@+id/Frame5"
+        android:layout_alignRight="@+id/Frame5"
+        android:gravity="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="More options"
+        android:layout_alignBottom="@+id/iText5"
+        android:layout_alignTop="@+id/iText5"
+        android:layout_toRightOf="@+id/iText5"
+        android:layout_below="@+id/Frame6"
+        android:layout_alignLeft= "@+id/Frame6"
+        android:layout_alignRight="@+id/Frame6"
+        android:gravity="center"
+        android:shadowColor="#FFF"
+        android:shadowRadius="10.0"
+        android:textColor="#0D4D4D"
+        android:textSize="20dp"
+        android:id="@+id/iText6"/>
+
+</RelativeLayout>
