--- a/app/src/main/res/layout/activity_set_random.xml
+++ b/app/src/main/res/layout/activity_set_random.xml
@@ -3,17 +3,18 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
     tools:context="stechb.myfirstapp.SetRandom"
     android:background="@drawable/cooking"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text = " Choose the type of meal you would like:"
         android:id = "@+id/instruct"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:textSize="18dp"
         android:shadowColor="#FFF"
         android:shadowRadius="10.0"
@@ -97,7 +98,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/Frame3"
         android:layout_below="@+id/iText1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="#407F7F"
         android:padding= "5dp">
 
@@ -167,7 +168,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/Frame5"
         android:layout_below="@+id/iText3"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="#407F7F"
         android:padding= "5dp">
 
