--- a/app/src/main/res/layout/activity_set_random.xml
+++ b/app/src/main/res/layout/activity_set_random.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="0dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     tools:context="stechb.myfirstapp.SetRandom"
     android:background="@drawable/cooking"
     android:orientation="vertical"
