--- a/app/src/main/res/layout/show_recipe.xml
+++ b/app/src/main/res/layout/show_recipe.xml
@@ -1,72 +1,82 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/cooking"
+    android:gravity="center"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="stechb.myfirstapp.ShowRecipe"
-    android:background="@drawable/cooking"
-    android:gravity="center">
+    android:id="@+id/thisLayout"
+    tools:context="stechb.myfirstapp.ShowRecipe">
 
     <ImageView
+        android:id="@+id/mealIcon"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/mealIcon"
-        android:padding="6dp"
-        android:background="#407F7F" />
+        android:background="#407F7F"
+        android:padding="6dp" />
 
     <TextView
+        android:id="@+id/mealName"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:textSize="22.5dp"
-        android:id="@+id/mealName"
         android:layout_alignBottom="@+id/mealIcon"
-        android:layout_toRightOf="@+id/mealIcon"
-        android:layout_alignTop="@+id/mealIcon"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/mealIcon"
+        android:layout_toRightOf="@+id/mealIcon"
         android:gravity="center"
         android:shadowColor="#FFF"
         android:shadowRadius="10.0"
-        android:textColor="#0D4D4D" />
-
-    <!--<TextView
-        android:layout_width="fill_parent"
-        android:layout_height="100dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
-        android:id="@+id/mealIngr"
-        android:layout_below="@+id/mealName"
-        android:layout_toEndOf="@+id/mealIcon"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:gravity="center"
-        android:shadowColor="#FFF"
-        android:shadowRadius="10.0"
-        android:textColor="#407F7F"
-    />-->
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#0D4D4D"
+        android:textSize="22.5dp" />
 
-    <TextView
+    <ViewFlipper
+        android:id="@+id/flipper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Ingredients comes here"
-        android:id="@+id/mealRecipe"
-        android:layout_toEndOf="@+id/mealIcon"
-        android:layout_below="@+id/mealName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:gravity="center"
-        android:shadowColor="#FFF"
-        android:shadowRadius="10.0"
-        android:textColor="#0D4D4D"
-        android:textSize="20dp"
-        android:scrollbars="vertical"
-        android:nestedScrollingEnabled="true"
+        android:layout_below="@+id/mealName"
         android:layout_marginTop="15dp"
-        android:background= "#44FFFFFF"
-        />
+        android:layout_toEndOf="@+id/mealIcon"
+        >
+
+            <TextView
+                android:id="@+id/mealIngredients"
+                android:layout_height="fill_parent"
+                android:layout_width="fill_parent"
+                android:background="#44FFFFFF"
+                android:gravity="center"
+                android:nestedScrollingEnabled="true"
+                android:scrollbars="vertical"
+                android:shadowColor="#FFF"
+                android:shadowRadius="10.0"
+                android:text="Ingredients comes here"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#0D4D4D"
+                android:textSize="20dp" />
+
+
+            <TextView
+                android:id="@+id/mealRecipe"
+                android:layout_height="fill_parent"
+                android:layout_width="fill_parent"
+                android:background="#44FFFFFF"
+                android:gravity="center"
+                android:nestedScrollingEnabled="true"
+                android:scrollbars="vertical"
+                android:shadowColor="#FFF"
+                android:shadowRadius="10.0"
+                android:text="Ingredients comes here"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#0D4D4D"
+                android:textSize="20dp" />
+
+    </ViewFlipper>
 
 </RelativeLayout>
