main activity layout fixed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/btnAdvanced"
         android:layout_alignRight="@+id/btnAdvanced"
-        android:gravity="center"
+        android:layout_centerVertical="true"
         android:onClick="chooseRandom"
         android:text="Random"
         android:textColor="#0D4D4D" />
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnRandom"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:onClick="setRandom"
         android:text="Advanced"
