arrows added for more intuitive swiping

--- a/app/src/main/res/layout/chosen_show.xml
+++ b/app/src/main/res/layout/chosen_show.xml
@@ -13,6 +13,25 @@
    >
 
     <ImageView
+        android:layout_width="10dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="200dp"
+        android:layout_alignTop="@+id/name_view"
+        android:background="@drawable/left_arrow2"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/leftArrow"/>
+
+    <ImageView
+        android:layout_width="10dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="200dp"
+        android:layout_alignTop="@+id/name_view"
+        android:layout_centerVertical="true"
+        android:background="@drawable/right_arrow2"
+        android:layout_alignParentRight="true"
+        android:id="@+id/rightArrow"/>
+
+    <ImageView
         android:layout_height="278dp"
         android:layout_width="300dp"
         android:id = "@+id/meal_image"
@@ -22,6 +41,10 @@
         android:padding="9dp"
         android:adjustViewBounds="true"
         android:layout_marginBottom="52dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@id/rightArrow"
+        android:layout_toRightOf="@id/leftArrow"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
@@ -38,7 +61,12 @@
         android:shadowColor="#FFF"
         android:shadowRadius="10.0"
 
-        android:minHeight="150dp" />
+        android:minHeight="150dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@id/rightArrow"
+        android:layout_toRightOf="@id/leftArrow"
+        />
 
 
 </RelativeLayout>
